z-index fix

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,10 +1,10 @@
 @use "../variables" as *;
 
 .component-container {
-  width: 100vw;
-  height: 100vh;
+  // width: 100vw;
+  // height: 100vh;
   position: absolute;
-  z-index: 5; // background-color: yellow;
+  z-index: 2; // background-color: yellow;
   // opacity: 0.5;
   .navbar {
     position: fixed;
@@ -18,10 +18,12 @@
     opacity: 0;
     visibility: hidden;
     transform: translateY(-100%);
+    pointer-events: none;
     &.visible {
       opacity: 1;
       visibility: visible;
       transform: translateY(0);
+      pointer-events: auto;
     }
     .navbar-logo {
       font-family: "Josefin Sans", sans-serif;
